# chronotask

./: README.md  pyproject.toml
src/chronotask_nsx116/: arguments.py  chronotask.py  focustrack.py  interval_timer.py  settings.py  stats.py  task.py  task_manager.py  writing_to_task.py
