[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronotask_nsx116"
version = "0.0.1"
authors = [
  { name="nsx116", email="nsx116@gmail.com" },
]
dependencies =[
        "pynput",
        "pygame",
        "appdirs",
        "terminaltables",
    ]
description = "A task manager with task's time tracker."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/chronotask_nsx116"
Issues = "https://github.com/pypa/chronotask_nsx116/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chronotask_nsx116"]

[project.scripts]
chronotask = "chronotask_nsx116.chronotask:main"

